--- a/src/Body/style.scss
+++ b/src/Body/style.scss
@@ -1,4 +1,57 @@
 .network-diff-tool .body {
     text-align: center;
     color: white;
+
+    .jump-next {
+        position: fixed;
+        bottom: 10px;
+        right: 9px;
+        background: white;
+        color: black;
+        border-radius: 4px;
+        padding: 10px;
+        cursor: pointer;
+        user-select: none;
+    }
+
+    .diff-lists {
+        display: flex;
+        align-items: center;
+        justify-content: space-around;
+        font-size: 10px;
+        word-break: break-all;
+
+        ul {
+            list-style: none;
+            max-width: 40%;
+
+            li {
+                cursor: pointer;
+                background: black;
+                margin-bottom: 10px;
+                padding: 5px;
+                border: 1px solid;
+            }
+        }
+    }
+
+    .diff-result {
+        text-align: left;
+        white-space: pre;
+
+        .loc {
+            padding: 5px;
+            color: white;
+
+            &.added {
+                color: black;
+                background: #b2ffa9;
+            }
+
+            &.removed {
+                color: black;
+                background: #ffa9a9;
+            }
+        }
+    }
 }
