--- a/src/Body/style.scss
+++ b/src/Body/style.scss
@@ -14,6 +14,12 @@
         user-select: none;
     }
 
+    .diff-option {
+        &.selected {
+            border-color: #07ff07;
+        }
+    }
+
     .diff-lists {
         display: flex;
         align-items: center;
