--- a/src/JumpNextBtn/style.scss
+++ b/src/JumpNextBtn/style.scss
@@ -1,13 +1,11 @@
-.network-diff-tool {
-    .jump-next {
-        position: fixed;
-        bottom: 10px;
-        right: 9px;
-        background: white;
-        color: black;
-        border-radius: 4px;
-        padding: 10px;
-        cursor: pointer;
-        user-select: none;
-    }
+.network-diff-tool .jump-next {
+    position: fixed;
+    bottom: 10px;
+    right: 9px;
+    background: white;
+    color: black;
+    border-radius: 4px;
+    padding: 10px;
+    cursor: pointer;
+    user-select: none;
 }
